--- a/themes/snippet/source/css/less/_highlight.less
+++ b/themes/snippet/source/css/less/_highlight.less
@@ -114,7 +114,7 @@ pre .literal,
 pre .params,
 pre .constant,
 pre .command {
-  color: #daa122;
+  color: #f3b223;
 }
 pre .ruby .class .title,
 pre .css .rules .attribute,
