--- a/themes/snippet/source/css/style.css
+++ b/themes/snippet/source/css/style.css
@@ -1270,7 +1270,7 @@ pre .literal,
 pre .params,
 pre .constant,
 pre .command {
-  color: #c59528;
+  color: #f3b223;
 }
 pre .ruby .class .title,
 pre .css .rules .attribute,
