--- a/themes/snippet/source/css/style.css
+++ b/themes/snippet/source/css/style.css
@@ -518,7 +518,7 @@ pre {
   font-family: "Georgia", "Xin Gothic", "Hiragino Sans GB", "Droid Sans Fallback", "Microsoft YaHei", "SimSun", sans-serif;
   color: #333;
   font-size: 1.17em;
-  margin: 1em 0;
+  margin: 2em 0 .8em;
   font-weight: bold;
 }
 .post-content h4 {
