--- a/themes/snippet/source/css/style.css
+++ b/themes/snippet/source/css/style.css
@@ -653,16 +653,16 @@ pre {
   padding: 0;
 }
 .post-content code {
-  color: #808080;
+  color: #f3b223;
   font-size: 0.96em;
-  background-color: #f9f9f9;
-  padding: 1px 2px;
-  border: 1px solid #dadada;
+  background-color: #1d1f21;
+  padding: 3px 8px;
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
   border-radius: 2px;
   font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
   word-wrap: break-word;
+  margin: 0 4px;
 }
 .post-content tt {
   color: #808080;
