--- a/themes/snippet/layout/_partial/copyright.ejs
+++ b/themes/snippet/layout/_partial/copyright.ejs
@@ -1,12 +1,13 @@
 <div class="copyright">
     <div class="container">
         <div class="row">
-            <div class="col-sm-12"> 
-                <span>&copy; 2017-<%= theme.since %> <a href="//github.com/sweida" class="copyright-links" target="_blank" rel="nofollow">sweida</a>
-                </span> | 
+            <div class="col-sm-12">
+                <span>&copy; 2017-<%= theme.since %> <a href="//github.com/sweida" class="copyright-links" target="_blank" rel="nofollow">sweida</a> 强力驱动
+                </span> |
                 <span>
-                    由 <a href="//hexo.io" class="copyright-links" target="_blank" rel="nofollow">Hexo</a> 强力驱动
-                </span> 
+                  备案：不存在的！
+                    <!-- 由 <a href="//hexo.io" class="copyright-links" target="_blank" rel="nofollow">Hexo</a> 强力驱动 -->
+                </span>
             </div>
         </div>
     </div>
