--- a/themes/snippet/source/css/style.css
+++ b/themes/snippet/source/css/style.css
@@ -517,9 +517,9 @@ pre {
 .post-content h3 {
   font-family: "Georgia", "Xin Gothic", "Hiragino Sans GB", "Droid Sans Fallback", "Microsoft YaHei", "SimSun", sans-serif;
   color: #333;
-  font-size: 1.17em;
-  margin: 2em 0 .8em;
-  font-weight: bold;
+  font-size: 20px;
+  margin: 1.5em 0 .8em;
+  font-weight: 600;
 }
 .post-content h4 {
   font-family: "Georgia", "Xin Gothic", "Hiragino Sans GB", "Droid Sans Fallback", "Microsoft YaHei", "SimSun", sans-serif;
@@ -611,8 +611,8 @@ pre {
 .post-content blockquote {
   margin: 0 0 1.64em 0;
   border-left: 3px solid #e67e22;
-  padding-left: 12px;
-  color: #666666;
+  padding: 5px 12px;
+  color: #333;
 }
 .post-content blockquote a {
   color: #666666;
@@ -620,7 +620,7 @@ pre {
 .post-content ul {
   margin: 0 0 24px 6px;
   padding-left: 16px;
-  list-style-type: square;
+  /* list-style-type: circle; */
 }
 .post-content ol {
   margin: 0 0 24px 6px;
@@ -656,7 +656,7 @@ pre {
   color: #f3b223;
   font-size: 0.96em;
   background-color: #1d1f21;
-  padding: 2px 8px;
+  padding: 1px 8px;
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
   border-radius: 2px;
@@ -851,20 +851,22 @@ pre {
   bottom: -1px;
 }
 .widget .tag-cloud a {
-  border: 1px solid #ebebeb;
-  padding: 2px 7px;
-  color: #959595;
+  /* border: 1px solid #ebebeb; */
+  padding: 2px 15px;
+  color: #505050;
   font-size: 1em!important;
   line-height: 1.5em;
   display: inline-block;
   margin: 0 7px 7px 0;
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
+  background: #EBEBEB;
+  border-radius: 20px;
 }
 .widget .tag-cloud a:hover {
   color: #fff;
   background: #e67e22;
-  border: 1px solid #e67e22;
+  /* border: 1px solid #e67e22; */
   text-decoration: none;
 }
 .widget .social a {
@@ -1365,6 +1367,9 @@ pre .javascript .function {
   .widget #search-form #result-wrap {
     left: -25px;
     width: 100%;
+  }
+  .post-content h3 {
+    font-weight: 500;
   }
 }
 @media screen and (min-width: 768px) {
